Bug 886281 - Constrain the absolutely positioned glass fog using overflow-y: hidden to avoid overlapping layers, r=jaws
UltraBlame original commit: f611d07ea260777f8cf6d93a9aac1dad2a0a00ff

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -1931,6 +1931,45 @@ index
 1
 ;
 }
+/
+*
+Need
+to
+constrain
+the
+glass
+fog
+to
+avoid
+overlapping
+layers
+see
+bug
+886281
+.
+*
+/
+#
+navigator
+-
+toolbox
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+overflow
+-
+y
+:
+hidden
+;
+}
 #
 main
 -
